enrich jackson reflection fail notice